Save KOrganizer reminders when they are first added to the alarm dialog

Previously, the list of already-triggered reminders only got saved to
the config file when the user actively dismissed or suspended one of
them. With this and the previous patches, saving and loading of
reminders should work correctly now.

BUG: 146336
BUG: 180413
FIXED-IN: 4.10